syntax = "proto3";

package gatekv_storage;

service GateKV_Storage {
    rpc Set (SetRequest) returns (Empty)       {} // Redirect to gateway (user -> storage)
    rpc Get (GetRequest) returns (GetResponse) {} // Handle locally
    rpc Rem (RemRequest) returns (Empty)       {} // Redirect to gateway (user -> storage)

    rpc SetData (SetRequest) returns (SetResponse) {} // Gateway -> storage
    rpc GetData (GetRequest) returns (GetResponse) {} // Gateway -> storage
    rpc RemData (RemRequest) returns (RemResponse) {} // Gateway -> storage
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    bool success = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bool success = 1;
    string value = 2;
}

message RemRequest {
    string key = 1;
}

message RemResponse {
    bool success = 1;
}

message Empty {
    // Empty message
}